--- a/omdazz/top.qsf
+++ b/omdazz/top.qsf
@@ -224,9 +224,35 @@ set_location_assignment PIN_143 -to cts2
 set_location_assignment PIN_144 -to rts2
 set_location_assignment PIN_100 -to enablebtn
 set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to enablebtn
+set_global_assignment -name VHDL_FILE ../vhdl/xubrt45.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/xubm.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/xubl.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/xu.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/vt.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/vgacr.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/vga.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/unibus.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/rl11.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/rk11.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/rh11.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/ps2.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/panelos.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/paneldriver.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/paneldb.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/oneshot.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/mmu.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/kw11l.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/kl11.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/gensdclk.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/fpuregs.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/dr11c.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/debounce.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/csdr.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/cr.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/cpuregs.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/cpu.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/blockramt42.vhd
 set_global_assignment -name VHDL_FILE ../rom/m9312h46.vhd
-set_global_assignment -name VHDL_FILE ../debounce.vhd
-set_global_assignment -name VHDL_FILE ../paneldriver.vhd
 set_global_assignment -name VHDL_FILE ../max7219/virtual_clock_a.vhdl
 set_global_assignment -name VHDL_FILE ../max7219/virtual_clock.vhdl
 set_global_assignment -name VHDL_FILE ../max7219/types.vhdl
@@ -236,26 +262,6 @@ set_global_assignment -name VHDL_FILE ../max7219/max7219.vhdl
 set_global_assignment -name VHDL_FILE ../max7219/LEDMatrix_a.vhdl
 set_global_assignment -name VHDL_FILE ../max7219/LEDMatrix.vhdl
 set_global_assignment -name VHDL_FILE ../rom/m9312l46.vhd
-set_global_assignment -name VHDL_FILE ../dr11c.vhd
-set_global_assignment -name VHDL_FILE ../panelos.vhd
-set_global_assignment -name VHDL_FILE ../paneldb.vhd
-set_global_assignment -name VHDL_FILE ../xubrt45.vhd
-set_global_assignment -name VHDL_FILE ../xubm.vhd
-set_global_assignment -name VHDL_FILE ../xubl.vhd
-set_global_assignment -name VHDL_FILE ../xu.vhd
-set_global_assignment -name VHDL_FILE ../kl11.vhd
-set_global_assignment -name VHDL_FILE ../rh11.vhd
 set_global_assignment -name VHDL_FILE top.vhd
-set_global_assignment -name VHDL_FILE ../cpu.vhd
-set_global_assignment -name VHDL_FILE ../cpuregs.vhd
-set_global_assignment -name VHDL_FILE ../cr.vhd
-set_global_assignment -name VHDL_FILE ../csdr.vhd
-set_global_assignment -name VHDL_FILE ../fpuregs.vhd
-set_global_assignment -name VHDL_FILE ../kw11l.vhd
-set_global_assignment -name VHDL_FILE ../mmu.vhd
-set_global_assignment -name VHDL_FILE ../rk11.vhd
-set_global_assignment -name VHDL_FILE ../rl11.vhd
-set_global_assignment -name VHDL_FILE ../unibus.vhd
-set_global_assignment -name VHDL_FILE ../oneshot.vhd
 set_global_assignment -name CDF_FILE omdazz.cdf
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
