--- a/rom/Makefile
+++ b/rom/Makefile
@@ -1,14 +1,15 @@
 
-m9312h = m9312h37.vhd m9312h38.vhd m9312h43.vhd m9312h44.vhd m9312h46.vhd m9312h47.vhd
+m9312h = m9312h37.vhd m9312h38.vhd m9312h43.vhd m9312h44.vhd m9312h46.vhd m9312h47.vhd m9312hdjrm.vhd 23-760A9.vhd 23-753A9.vhd
 m9312hs = m9312h40.vhd
-m9312l = m9312l46.vhd m9312l47.vhd
+m9312l = m9312l46.vhd m9312l47.vhd m9312ldjrm.vhd
+odt11 = odt11.vhd
 
 blockrams = blockramt42.vhd
 blockram = blockramt25.vhd blockramt27.vhd blockramt33.vhd blockramt39.vhd blockramt41.vhd
 
 xubr = xubrt45.vhd
 
-allromram = $(m9312h) $(m9312hs) $(m9312l) $(blockrams) $(blockram) $(xubr)
+allromram = $(m9312h) $(m9312hs) $(m9312l) $(blockrams) $(blockram) $(xubr) $(odt11)
 
 all: $(allromram)
 
@@ -23,6 +24,9 @@ $(m9312hs): %.vhd: %.obj
 
 $(m9312l): %.vhd: %.obj
 	genblkram -t m9312l -s 16 -i $*.obj -o $@
+
+$(odt11): %.vhd: %.obj
+	genblkram -t blockram -s 128 -i $*.obj -o $@
 
 $(blockrams): %.vhd: %.obj
 	genblkram -t blockram -s 128 -i $*.obj -o $@
